Création fichier "menus"

--- a/menus/menu-a-la-francaise.html
+++ b/menus/menu-a-la-francaise.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/prefixed/style.css"> 
+        <link rel="stylesheet" href="../css/prefixed/style.css"> 
         <script src="https://kit.fontawesome.com/9389dccd37.js" crossorigin="anonymous"></script>
         <title>Ohmyfood</title>
     </head>
     <body>
         <header>
             <h1 class="logo">
-                <a href="accueil.html"><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="../accueil.html"><i class="fa-solid fa-arrow-left"></i></a>
                 ohmyfood
             </h1>
         </header>
         <main class="menu">
-            <img class="restaurant-picture" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel">
+            <img class="restaurant-picture" src="../images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba">
             <section class="card">
                 <h2 class="card_heading">
-                    Le délice des sens
+                    À la française
                     <i class="fa-regular fa-heart"></i>
                     <i class="fa-solid fa-heart"></i>
                 </h2>
@@ -27,9 +27,9 @@
                     <ul>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Tartare de thon</h4>
+                                <h4>Tartare de poulpe acidulé</h4>
                                 <p>
-                                    Assaisonné au yuzu
+                                    Aux zestes d'orange
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -40,9 +40,9 @@
                         </li>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Bouchée de homard croustillant</h4>
+                                <h4>Velouté de légumes d'antan</h4>
                                 <p>
-                                    Et sa farandole de petits légumes
+                                    Carotte, panais, topinambour 
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -53,9 +53,9 @@
                         </li>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Velouté de cèpes</h4>
+                                <h4>Soupe à l'oignon</h4>
                                 <p>
-                                    Aux truffes
+                                    Revisitée 
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -69,9 +69,9 @@
                     <ul>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Poulet rôti aux herbes de Provence</h4>
+                                <h4>Coquilles Saint-Jacques</h4>
                                 <p>
-                                    Et sa crème de truffe 
+                                    Accompagnées d'une purée de panais 
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -82,9 +82,9 @@
                         </li>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Langouste rôtie</h4>
+                                <h4>Magret de canard</h4>
                                 <p>
-                                    Et ses légumes de saison 
+                                    Et parmentier de pommes de terre 
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -95,9 +95,9 @@
                         </li>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Côte de boeuf Angus</h4>
+                                <h4>Pigeonneau d'Ille-et-Vilaine</h4>
                                 <p>
-                                    Et sa purée de panais 
+                                    Sur son lit de gnocchis aux légumes 
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -111,9 +111,9 @@
                     <ul>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Farandole de desserts</h4>
+                                <h4>Pétales de violettes glacés</h4>
                                 <p>
-                                    Du chef
+                                    Et purée de noisettes
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -124,9 +124,9 @@
                         </li>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Crème brulée</h4>
+                                <h4>Fondant au chocolat</h4>
                                 <p>
-                                    Revisitée
+                                    Revisité
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
@@ -137,9 +137,9 @@
                         </li>
                         <li class="card_content_dish">
                             <div class="card_content_dish_entitled">
-                                <h4>Tiramisu</h4>
+                                <h4>Millefeuille croustillant</h4>
                                 <p>
-                                    À la noisette 
+                                    Myrtilles et pâte d'amande 
                                 </p>
                             </div>
                             <div class="card_content_dish_price">
