--- a/accueil.html
+++ b/accueil.html
@@ -53,7 +53,7 @@
                 <h2 class="restaurant-menu_heading">Restaurants</h2>
                 <div class="restaurant-menu_content">
                     <article>
-                        <a href="menu-la-palette-du-gout.html">
+                        <a href="menus/menu-la-palette-du-gout.html">
                             <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington">
                             <span>Nouveau</span>
                             <h3>La palette du goût</h3>
@@ -65,7 +65,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </article>
                     <article>
-                        <a href="menu-la-note-enchantee.html">
+                        <a href="menus/menu-la-note-enchantee.html">
                             <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
                             <span>Nouveau</span>
                             <h3>La note enchantée</h3>
@@ -77,7 +77,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </article>
                     <article>
-                        <a href="menu-a-la-francaise.html">
+                        <a href="menus/menu-a-la-francaise.html">
                             <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba">
                             <h3>À la française</h3>
                             <p>
@@ -88,7 +88,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </article>
                     <article>
-                        <a href="menu-le-delice-des-sens.html">
+                        <a href="menus/menu-le-delice-des-sens.html">
                             <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="louis-hansel">
                             <h3>Le délice des sens</h3>
                             <p>
