--- a/menus/menu-la-note-enchantee.html
+++ b/menus/menu-la-note-enchantee.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/prefixed/style.css"> 
+        <link rel="stylesheet" href="../css/prefixed/style.css"> 
         <script src="https://kit.fontawesome.com/9389dccd37.js" crossorigin="anonymous"></script>
         <title>Ohmyfood</title>
     </head>
     <body>
         <header>
             <h1 class="logo">
-                <a href="accueil.html"><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="../accueil.html"><i class="fa-solid fa-arrow-left"></i></a>
                 ohmyfood
             </h1>
         </header>
         <main class="menu">
-            <img class="restaurant-picture" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
+            <img class="restaurant-picture" src="../images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil">
             <section class="card">
                 <h2 class="card_heading">
                     La note enchantée
