--- a/menus/menu-la-note-enchantee.html
+++ b/menus/menu-la-note-enchantee.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <h1 class="logo">
-                <a href="../accueil.html"><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
                 ohmyfood
             </h1>
         </header>
