--- a/menus/menu-la-note-enchantee.html
+++ b/menus/menu-la-note-enchantee.html
@@ -78,6 +78,8 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </li>
                     </ul>
+                </div>
+                <div class="card_content">
                     <h3>PLATS</h3>
                     <ul>
                         <li class="card_content_dish">
@@ -120,6 +122,8 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </li>
                     </ul>
+                </div>
+                <div class="card_content">
                     <h3>DESSERTS</h3>
                     <ul>
                         <li class="card_content_dish">
