--- a/menus/menu-la-palette-du-gout.html
+++ b/menus/menu-la-palette-du-gout.html
@@ -65,6 +65,8 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </li>
                     </ul>
+                </div>
+                <div class="card_content">
                     <h3>PLATS</h3>
                     <ul>
                         <li class="card_content_dish">
@@ -107,6 +109,8 @@
                             <i class="fa-solid fa-circle-check"></i>
                         </li>
                     </ul>
+                </div>
+                <div class="card_content">
                     <h3>DESSERTS</h3>
                     <ul>
                         <li class="card_content_dish">
