--- a/index.html
+++ b/index.html
@@ -103,17 +103,18 @@
         </main>
         <footer>
             <h3 class="logo">ohmyfood</h3>
-            <p>
-                <i class="fa-solid fa-utensils"></i>
-                <a href="#">Proposer un restaurant</a>
-                <br>
-                <i class="fa-solid fa-handshake-angle"></i>
-                <a href="#">Devenir partenaire</a>
-                <br>
-                <a href="#">Mentions légales</a>
-                <br>
-                <a href="mailto:ohmyfood@gmail.fr">Contact</a>
-            </p>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-utensils"></i>
+                    <a href="#">Proposer un restaurant</a>
+                </li>
+                <li>
+                    <i class="fa-solid fa-handshake-angle"></i>
+                    <a href="#">Devenir partenaire</a>
+                </li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="mailto:ohmyfood@gmail.fr">Contact</a></li>
+            </ul>
         </footer>
     </body>
 </html>
